--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.10"
 pydantic = "^2.11.3"
 openpyxl = "^3.1.5"
 cryptography = "^44.0.2"
+sqlalchemy = "^2.0.40"
+requests = "^2.32.3"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
